Fix icon-wrap issue

--- a/src/app/forms/change-profile/change-profile.component.scss
+++ b/src/app/forms/change-profile/change-profile.component.scss
@@ -8,6 +8,9 @@
       display: flex;
       flex-direction: row;
       gap: 15px;
+      @media(max-width: 767px) {
+        flex-direction: column-reverse;
+      }
       .first-wrap,
       .second-wrap,
       .third-wrap,
@@ -153,6 +156,9 @@
     border-radius: 100%;
     padding: 5px;
     top: -32px;
+    @media(max-width: 767px) {
+      width: 35%;
+    }
     &:hover {
         mat-icon {
             cursor: pointer;
@@ -165,7 +171,7 @@
 }
 .images-wrap {
     position: absolute;
-    top: 28%;
+    top: 33%;
     right: 21%;
     .images-list {
         width: 270px;
